# CodePraticeOnLinux

./: README.md
1net/: inet_pton_example.c
1sys/: fork.c  forkN.c  getEnv.c  printEnv.c
2net/: client.c  server.c
2sys/: execlp_ls.c  loop_fork.c  pipe_test.c  zombie_wait.c
3sys/: fork_mmap.c  mmap_test.c
4net/: epoll_server.c
4sys/: alarm_test.c  kill_myself.c  sigact_test.c  timer.c
5sys/: daemond.c  pause_sleep.c  sigsuspend.c
6sys/pcreate/: Makefile  pt_create.c
7sys/: cond_producer_consumer.c  mutex_test.c  sem_producer_consumer.c
CMake/: README.md
CMake/APP1/: CMakeLists.txt  README.md  config.h.in  install.sh  main.cpp  uninstall.sh
CMake/APP1/mymath/: CMakeLists.txt  mymath.cpp  mymath.h
CMake/Demo1/: CMakeLists.txt  main.cpp
CMake/Demo2/: CMakeLists.txt  calc.h  main.cpp
CMake/Demo3/: CMakeLists.txt  main.cpp
CMake/Demo3/calc/: CMakeLists.txt  calc.cpp
CMake/Demo4/: CMakeLists.txt  main.cpp  uninatsll.sh
CMake/Demo4/mymath/: CMakeLists.txt
CMake/Demo5/: CMakeLists.txt  install.sh  uninstall.sh
CMake/Demo5/mymath/: CMakeLists.txt
HelloWorld/: HelloWorld  HelloWorld.cpp  HelloWorldCpp
Json/: JsonTest.cpp  data.json
Thread/CThread/: Mutex.c  NoMutex.c  Semaphore.c  ThreadCreate.c
awk/: result.txt  test.sh  test.txt
